[gd_scene load_steps=2 format=3 uid="uid://dlwa10kydfpsy"]

[ext_resource type="Script" path="res://scripts/entities/collectible_component.gd" id="1_kjlld"]

[node name="CollectibleComponent" type="Area2D"]
collision_layer = 8
collision_mask = 2
script = ExtResource("1_kjlld")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
